--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,9 +2,9 @@
 postgresql:
   host: "localhost"
   port: "5432"
-  username: "postgres"
-  password: "postgres100688"
-  database: "postgres"
+  username: "root"
+  password: "secret"
+  database: "reminder"
 
 http:
   ip: "localhost"
