--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   postgres:
     container_name: postgres
-    image: postgres:15-alpine
+    image: postgres:latest
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=secret
@@ -11,14 +11,18 @@ services:
       - "5432:5432"
 
   reminder-api:
-    container_name: todo-api
+    container_name: reminder-api
     build:
       context: .
       dockerfile: Dockerfile
     restart: on-failure
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_DB=reminder
+      - DATABASE_HOST=postgres
+      - DATABASE_PORT=5432
     ports:
       - "8000:8000"
-    environment:
-      - DB_SOURCE=postgresql://root:secret@postgres:5432/reminder?sslmode=disable
     depends_on:
       - postgres
