--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 postgresql:
   host: "localhost"
   port: "5432"
-  username: "postgres"
+  username: "root"
   password: "secret"
   database: "reminder"
 
