--- a/config.yaml
+++ b/config.yaml
@@ -18,3 +18,5 @@ auth:
   google_auth_client_id: "791945691797-st6cigpu7pl7m1o7po05kqdapm7uahpm.apps.googleusercontent.com"
   google_auth_client_secret: "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"
   google_auth_redirect_url: "https://localhost:8000/auth/google/callback"
+
+  frontend_origin: "http://localhost:3000"
