--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -28,4 +28,5 @@ jobs:
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: v1.29
+      - name: run lint
         run: make lint
