--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      postgres:
+      db:
         image: postgres:latest
         env:
           POSTGRES_USER: root
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Go 1.19
         uses: actions/setup-go@v3
         with:
-          go-version: '1.17'
+          go-version: ^1.19
 
       - name: Install golang-migrate
         run: |
@@ -38,17 +38,21 @@ jobs:
         run: make migrateup_test
 
       - name: run test
-        run: make int_test
+        run: make test
 
-  golangci:
+  lint:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
-        with:
-          go-version: 1.17
-      - name: Install golangci-lint
-        run: |
-            curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.42.1
-      - name: run lint
-        run: golangci-lint run --enable=revive --timeout=5m --enable=misspell --enable=stylecheck --enable=goimports
+        - name: Setup Go
+          uses: actions/setup-go@v3.0.0
+          with:
+            go-version: 1.19
+
+        - uses: actions/checkout@v2
+
+        - name: golangci-lint
+          uses: golangci/golangci-lint-action@v3.1.0
+          with:
+            # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
+            version: v1.45.2
