--- a/dockers/Dockerfile-worker
+++ b/dockers/Dockerfile-worker
@@ -1,11 +1,11 @@
 # Step 1: Modules caching
-FROM golang:1.19-alpine3.16 as modules
+FROM golang:1.19-alpine as modules
 COPY go.mod go.sum /modules/
 WORKDIR /modules
 RUN go mod download
 
 # Step 2: Builder
-FROM golang:1.19-alpine3.16 as builder
+FROM golang:1.19-alpine as builder
 COPY --from=modules /go/pkg /go/pkg
 COPY . /app
 WORKDIR /app
@@ -13,9 +13,12 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
     go build -o /bin/app ./cmd/worker
 
 # Step 3: Final
-FROM scratch
+FROM alpine:latest
+RUN apk --no-cache add ca-certificates \
+  && update-ca-certificates
 
 # GOPATH for scratch images is /
 COPY --from=builder /app/config.yaml /
+COPY --from=builder /app/serviceAccountKey.json /
 COPY --from=builder /bin/app /app
 CMD ["/app"]
