--- a/dockers/Dockerfile-worker
+++ b/dockers/Dockerfile-worker
@@ -10,7 +10,7 @@ COPY --from=modules /go/pkg /go/pkg
 COPY . /app
 WORKDIR /app
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-    go build -o /bin/app ./cmd/workers
+    go build -o /bin/app ./cmd/worker
 
 # Step 3: Final
 FROM alpine:latest
@@ -18,6 +18,7 @@ RUN apk --no-cache add ca-certificates \
   && update-ca-certificates
 
 # GOPATH for scratch images is /
+COPY db/migrations/ /migrations
 COPY --from=builder /app/config.yaml /
 COPY --from=builder /app/serviceAccountKey.json /
 COPY --from=builder /bin/app /app
