--- a/dockers/Dockerfile-worker
+++ b/dockers/Dockerfile-worker
@@ -18,7 +18,7 @@ RUN apk --no-cache add ca-certificates \
   && update-ca-certificates
 
 # GOPATH for scratch images is /
-COPY db/migrations/ /migrations
+COPY db/migrations/ /migrations/
 COPY --from=builder /app/config.yaml /
 COPY --from=builder /app/serviceAccountKey.json /
 COPY --from=builder /bin/app /app
