--- a/dockers/Dockerfile-worker
+++ b/dockers/Dockerfile-worker
@@ -14,6 +14,9 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
 
 # Step 3: Final
 FROM alpine:latest
+RUN wget https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz
+RUN tar -xf migrate.linux-amd64.tar.gz
+RUN mv migrate.linux-amd64 /usr/bin/migrate
 RUN apk --no-cache add ca-certificates \
   && update-ca-certificates
 
