--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -67,24 +67,52 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build Docker Images
+      - name: Build Reminder image
         run: |
           docker buildx build \
-            --file Dockerfile \
-            --tag your-image-tag \
+            --file dockers/Dockerfile-reminder \
+            --tag eu.gcr.io/coa-project-5c923/coa-reminder:latest \
             .
+
+      - name: Build Worker image
+        run: |
+          docker buildx build \
+            --file dockers/Dockerfile-worker \
+            --tag eu.gcr.io/coa-project-5c923/coa-worker:latest \
+            .
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          version: 'latest'
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: coa-project-5c923
 
       - name: Login to Google Container Registry
         run: |
-          docker buildx build \
+          gcloud auth configure-docker europe-central2-docker.pkg.dev \
             --file Dockerfile \
             --tag your-image-tag \
             .
 
-      - name: Push Docker Image
+      - name: Push Docker images
         run: |
-          docker push your-image-tag
-    
+          docker push eu.gcr.io/coa-project-5c923/coa-reminder:latest
+          docker push eu.gcr.io/coa-project-5c923/coa-worker:latest
+  
+  manual-approval:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/stage'
+    steps:
+      - uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: PavelDonchenko,vitalis-virtus,penkova
+          minimum-approvals: 1
+          issue-title: "Deploying Reminder and Worker to cluster"
+          issue-body: "Please approve or deny the deployment of Reminder and Worker images"
+
+
   deploy:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/stage'
@@ -97,7 +125,7 @@ jobs:
         with:
           version: 'latest'
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: YOUR_PROJECT_ID
+          project_id: coa-project-5c923
 
       - name: Configure Docker and Kubectl
         run: |
@@ -111,8 +139,14 @@ jobs:
 
       - name: Deploy to GKE
         run: |
-          helm upgrade --install your-release-name your-chart-directory \
-            --set image.repository=gcr.io/YOUR_PROJECT_ID/your-image-tag \
-            --set image.tag=latest \
-            --set other-values=...
+          git clone https://github.com/red-rocket-software/coa-infrastructure.git
+          cd coa-infrastructure
+          git checkout dev
+          cd Helm
+          helm upgrade --install staging-reminder-release reminder-chart \
+            --set image=eu.gcr.io/coa-project-5c923/coa-reminder \
+            --set tag=latest
+          helm upgrade --install staging-worker-release worker-chart \
+            --set image=eu.gcr.io/coa-project-5c923/coa-worker \
+            --set tag=latest
 
