--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -60,6 +60,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/stage'
+    needs: [test, lint]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -82,7 +83,7 @@ jobs:
             .
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@main
         with:
           version: 'latest'
           service_account_key: ${{ secrets.GCP_SA_KEY }}
@@ -102,6 +103,7 @@ jobs:
   
   manual-approval:
     runs-on: ubuntu-latest
+    needs: [build]
     if: github.ref == 'refs/heads/stage'
     steps:
       - uses: trstringer/manual-approval@v1
@@ -112,16 +114,16 @@ jobs:
           issue-title: "Deploying Reminder and Worker to cluster"
           issue-body: "Please approve or deny the deployment of Reminder and Worker images"
 
-
   deploy:
     runs-on: ubuntu-latest
+    needs: [manual-approval]
     if: github.ref == 'refs/heads/stage'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@main
         with:
           version: 'latest'
           service_account_key: ${{ secrets.GCP_SA_KEY }}
