--- a/dockers/Dockerfile-worker
+++ b/dockers/Dockerfile-worker
@@ -22,7 +22,7 @@ RUN apk --no-cache add ca-certificates \
 
 # GOPATH for scratch images is /
 COPY db/migrations/ /migrations/
-COPY --from=builder /app/config.yaml /
-COPY --from=builder /app/serviceAccountKey.json /
+#COPY --from=builder /app/config.yaml /
+#COPY --from=builder /app/serviceAccountKey.json /
 COPY --from=builder /bin/app /app
 CMD ["/app"]
