--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -85,48 +85,7 @@ jobs:
           image_tag: latest
           dockerfile: dockers/Dockerfile-worker
           context: .
-     #- name: Set up Docker Buildx
-     #  uses: docker/setup-buildx-action@v1
-#
-     #- name: Build Reminder image
-     #  run: |
-     #    docker build \
-     #      --file dockers/Dockerfile-reminder \
-     #      -t eu.gcr.io/coa-project-5c923/coa-reminder:latest \
-     #      .
-     #      docker image ls
-#
-     #- name: Build Worker image
-     #  run: |
-     #    docker build \
-     #      --file dockers/Dockerfile-worker \
-     #      -t eu.gcr.io/coa-project-5c923/coa-worker:latest \
-     #      .
-     #    docker image ls
-#
-     #- name: Set up Google Cloud SDK
-     #  uses: google-github-actions/setup-gcloud@main
-     #  with:
-     #    version: 'latest'
-     #    service_account_key: ${{ secrets.GCP_SA_KEY }}
-     #    project_id: coa-project-5c923
-#
-     #- name: Login to Google Container Registry
-     #  run: |
-     #    gcloud auth configure-docker europe-central2-docker.pkg.dev
-#
-     #- name: 'Authenticate to Google Cloud'
-     #  uses: 'google-github-actions/auth@v1'
-     #  with:
-     #    credentials_json: ${{ secrets.GCP_SA_KEY }}
-#
-     #- name: Push Docker images
-     #  run: |
-     #    echo ${{ secrets.GCP_SA_KEY }} > auth.json
-     #    gcloud auth activate-service-account --key-file auth.json
-     #    docker push eu.gcr.io/coa-project-5c923/coa-reminder:latest
-     #    docker push eu.gcr.io/coa-project-5c923/coa-worker:latest
-  
+
   manual-approval:
     runs-on: ubuntu-latest
     needs: [build]
@@ -135,7 +94,7 @@ jobs:
       - uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
-          approvers: PavelDonchenko,vitalis-virtus,penkova
+          approvers: PavelDonchenko,vitalis-virtus,penkova,pibblokto
           minimum-approvals: 1
           issue-title: "Deploying Reminder and Worker to cluster"
           issue-body: "Please approve or deny the deployment of Reminder and Worker images"
