--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -139,7 +139,7 @@ jobs:
         run: |
           eval `ssh-agent -s`
           ssh-add - <<< '${{ secrets.INFRASTRUCTURE_PRIVATE_KEY }}'
-          git clone https://github.com/red-rocket-software/coa-infrastructure.git
+          git clone git@github.com:red-rocket-software/coa-infrastructure.git
           cd coa-infrastructure
           git checkout dev
           cd Helm
