--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -89,7 +89,7 @@ jobs:
       
       - name: Retag with digest
         run: |
-          for i in $(docker image ls -q); do docker image rm $i; done
+          for i in $(docker image ls -q); do docker image rm -f $i; done
           REMINDER_IMAGE=eu.gcr.io/coa-project-5c923/coa-reminder:latest
           WORKER_IMAGE=eu.gcr.io/coa-project-5c923/coa-worker:latest
           docker pull $REMINDER_IMAGE
