--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -87,12 +87,15 @@ jobs:
           dockerfile: dockers/Dockerfile-worker
           context: .
       
+      - name: Login to GCR
+        uses: docker/login-action@v2
+        with:
+          registry: eu.gcr.io
+          username: _json_key
+          password: ${{ secrets.GCP_SA_KEY }}
+
       - name: Retag with digest
-        env: 
-          SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
-          echo $SA_KEY | base64 -d > /tmp/key.json
-          cat /tmp/key.json | docker login -u _json_key --password-stdin https://eu.gcr.io
           REMINDER_IMAGE=eu.gcr.io/coa-project-5c923/coa-reminder:latest
           WORKER_IMAGE=eu.gcr.io/coa-project-5c923/coa-worker:latest
           sudo docker image rm -f $REMINDER_IMAGE
