--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -92,7 +92,7 @@ jobs:
           SA_KEY: ${{ secrets.GCP_SA_KEY }}
         run: |
           echo "$SA_KEY" > /tmp/key.json
-          cat /tmp/key.json | docker login -u _json_key --password-stdin https://eu.gcr.io
+          cat /tmp/key.json | sudo docker login -u _json_key --password-stdin https://eu.gcr.io
           REMINDER_IMAGE=eu.gcr.io/coa-project-5c923/coa-reminder:latest
           WORKER_IMAGE=eu.gcr.io/coa-project-5c923/coa-worker:latest
           sudo docker image rm -f $REMINDER_IMAGE
