--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -57,74 +57,74 @@ jobs:
   #          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
   #          version: v1.45.2
   
-  build:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/stage'
-    #needs: [test, lint]
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Build and push reminder
-        uses: RafikFarhad/push-to-gcr-github-action@v5-beta
-        with:
-          gcloud_service_key: ${{ secrets.GCP_SA_KEY }}
-          registry: eu.gcr.io
-          project_id: coa-project-5c923
-          image_name: coa-reminder
-          image_tag: latest
-          dockerfile: dockers/Dockerfile-reminder
-          context: .
-
-      - name: Build and push worker
-        uses: RafikFarhad/push-to-gcr-github-action@v5-beta
-        with:
-          gcloud_service_key: ${{ secrets.GCP_SA_KEY }}
-          registry: eu.gcr.io
-          project_id: coa-project-5c923
-          image_name: coa-worker
-          image_tag: latest
-          dockerfile: dockers/Dockerfile-worker
-          context: .
-      
-      - name: Retag with digest
-        env: 
-          SA_KEY: ${{ secrets.GCP_SA_KEY }}
-        run: |
-          echo "$SA_KEY" > /tmp/key.json
-          cat /tmp/key.json | docker login -u _json_key --password-stdin https://eu.gcr.io
-          REMINDER_IMAGE=eu.gcr.io/coa-project-5c923/coa-reminder:latest
-          WORKER_IMAGE=eu.gcr.io/coa-project-5c923/coa-worker:latest
-          docker image rm -f $REMINDER_IMAGE
-          docker image rm -f $WORKER_IMAGE
-          docker pull $REMINDER_IMAGE
-          docker pull $WORKER_IMAGE
-          REMINDER_SHA=$(docker inspect --format='{{index .RepoDigests 0}}' $REMINDER_IMAGE)
-          WORKER_SHA=$(docker inspect --format='{{index .RepoDigests 0}}' $WORKER_IMAGE)
-          REMINDER_TAG=${REMINDER_SHA: -25}
-          WORKER_TAG=${WORKER_SHA: -25}
-          docker tag $REMINDER_IMAGE eu.gcr.io/coa-project-5c923/coa-reminder:${REMINDER_TAG}
-          docker tag $WORKER_IMAGE eu.gcr.io/coa-project-5c923/coa-worker:${WORKER_TAG}
-          docker push eu.gcr.io/coa-project-5c923/coa-reminder:${REMINDER_TAG}
-          docker push eu.gcr.io/coa-project-5c923/coa-worker:${WORKER_TAG}
-
-
-  manual-approval:
-    runs-on: ubuntu-latest
-    needs: [build]
-    if: github.ref == 'refs/heads/stage'
-    steps:
-      - uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ github.TOKEN }}
-          approvers: PavelDonchenko,vitalis-virtus,penkova,pibblokto
-          minimum-approvals: 1
-          issue-title: "Deploying Reminder and Worker to cluster"
-          issue-body: "Please approve or deny the deployment of Reminder and Worker images"
+  #build:
+  #  runs-on: ubuntu-latest
+  #  if: github.ref == 'refs/heads/stage'
+  #  #needs: [test, lint]
+  #  steps:
+  #    - name: Checkout Repository
+  #      uses: actions/checkout@v2
+#
+  #    - name: Build and push reminder
+  #      uses: RafikFarhad/push-to-gcr-github-action@v5-beta
+  #      with:
+  #        gcloud_service_key: ${{ secrets.GCP_SA_KEY }}
+  #        registry: eu.gcr.io
+  #        project_id: coa-project-5c923
+  #        image_name: coa-reminder
+  #        image_tag: latest
+  #        dockerfile: dockers/Dockerfile-reminder
+  #        context: .
+#
+  #    - name: Build and push worker
+  #      uses: RafikFarhad/push-to-gcr-github-action@v5-beta
+  #      with:
+  #        gcloud_service_key: ${{ secrets.GCP_SA_KEY }}
+  #        registry: eu.gcr.io
+  #        project_id: coa-project-5c923
+  #        image_name: coa-worker
+  #        image_tag: latest
+  #        dockerfile: dockers/Dockerfile-worker
+  #        context: .
+  #    
+  #    - name: Retag with digest
+  #      env: 
+  #        SA_KEY: ${{ secrets.GCP_SA_KEY }}
+  #      run: |
+  #        echo "$SA_KEY" > /tmp/key.json
+  #        cat /tmp/key.json | docker login -u _json_key --password-stdin https://eu.gcr.io
+  #        REMINDER_IMAGE=eu.gcr.io/coa-project-5c923/coa-reminder:latest
+  #        WORKER_IMAGE=eu.gcr.io/coa-project-5c923/coa-worker:latest
+  #        docker image rm -f $REMINDER_IMAGE
+  #        docker image rm -f $WORKER_IMAGE
+  #        docker pull $REMINDER_IMAGE
+  #        docker pull $WORKER_IMAGE
+  #        REMINDER_SHA=$(docker inspect --format='{{index .RepoDigests 0}}' $REMINDER_IMAGE)
+  #        WORKER_SHA=$(docker inspect --format='{{index .RepoDigests 0}}' $WORKER_IMAGE)
+  #        REMINDER_TAG=${REMINDER_SHA: -25}
+  #        WORKER_TAG=${WORKER_SHA: -25}
+  #        docker tag $REMINDER_IMAGE eu.gcr.io/coa-project-5c923/coa-reminder:${REMINDER_TAG}
+  #        docker tag $WORKER_IMAGE eu.gcr.io/coa-project-5c923/coa-worker:${WORKER_TAG}
+  #        docker push eu.gcr.io/coa-project-5c923/coa-reminder:${REMINDER_TAG}
+  #        docker push eu.gcr.io/coa-project-5c923/coa-worker:${WORKER_TAG}
+#
+#
+  #manual-approval:
+  #  runs-on: ubuntu-latest
+  #  needs: [build]
+  #  if: github.ref == 'refs/heads/stage'
+  #  steps:
+  #    - uses: trstringer/manual-approval@v1
+  #      with:
+  #        secret: ${{ github.TOKEN }}
+  #        approvers: PavelDonchenko,vitalis-virtus,penkova,pibblokto
+  #        minimum-approvals: 1
+  #        issue-title: "Deploying Reminder and Worker to cluster"
+  #        issue-body: "Please approve or deny the deployment of Reminder and Worker images"
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [manual-approval]
+    #needs: [manual-approval]
     if: github.ref == 'refs/heads/stage'
     steps:
       - name: Checkout Repository
@@ -173,8 +173,8 @@ jobs:
           docker pull $WORKER_IMAGE
           REMINDER_SHA=$(docker inspect --format='{{index .RepoDigests 0}}' $REMINDER_IMAGE)
           WORKER_SHA=$(docker inspect --format='{{index .RepoDigests 0}}' $WORKER_IMAGE)
-          REMINDER_TAG={REMINDER_SHA: -25}
-          WORKER_TAG={WORKER_SHA: -25}
+          REMINDER_TAG=${REMINDER_SHA: -25}
+          WORKER_TAG=${WORKER_SHA: -25}
 
           helm upgrade --install staging-reminder-release reminder-chart \
             --set image=eu.gcr.io/coa-project-5c923/coa-reminder \
