--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -60,7 +60,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/stage'
+    if: github.ref == 'refs/heads/dev'
     needs: [test, lint]
     steps:
       - name: Checkout Repository
@@ -113,7 +113,7 @@ jobs:
   manual-approval:
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.ref == 'refs/heads/stage'
+    if: github.ref == 'refs/heads/dev'
     steps:
       - uses: trstringer/manual-approval@v1
         with:
@@ -126,7 +126,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [manual-approval]
-    if: github.ref == 'refs/heads/stage'
+    if: github.ref == 'refs/heads/dev'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
