--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -11,7 +11,7 @@ jobs:
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
-          POSTGRES_DB: test_reminder
+          POSTGRES_DB: test_coa
         ports:
           - 5432:5432
         options: >-
