--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -183,3 +183,4 @@ jobs:
           helm upgrade --install staging-worker-release worker-chart \
             --set image=eu.gcr.io/coa-project-5c923/coa-worker \
             --set tag=$WORKER_TAG
+#fytf
